Base test - try with resources